--- a/style.css
+++ b/style.css
@@ -66,4 +66,29 @@ body {
     width: 100%;
     height: 750px;
     filter: blur(2px);
+    z-index: -99;
+    position: absolute;
+}
+
+#home .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 200px 300px 200px;
+}
+
+#home .wrapper h1 {
+    color: yellow;
+    font-size: 54px;
+}
+
+#home .wrapper p {
+    color: white;
+    font-size: 36px;
+    margin-top: 15px;
+}
+
+#sobre-nos {
+    padding: 200px 0;
+    min-height: 900px;
 }
