--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,900;1,700;1,900&display=swap');
-@import url('http://fonts.cdnfonts.com/css/dragon-is-coming');
+/* @import url('http://fonts.cdnfonts.com/css/dragon-is-coming'); */
 :root {
     --background-color: black;
     --background-secondary: yellow;
@@ -218,8 +218,6 @@ body {
     background: black;
     opacity: 0.3;
     justify-content: center;
-    
-    
 }
 
 #sobre-nos .c-carousel__slide img {
@@ -244,6 +242,7 @@ body {
     filter:brightness(45%);
     transition: 1s;
     border-radius: 5px;
+    -webkit-transform: translateZ(0);
 }
 
 #artistas .cards2 {
@@ -283,6 +282,7 @@ body {
     font-size: 20px;
     color: white;
     transition: 0.5s;
+    text-decoration: none;
 }
 
 #artistas .card img:hover {
@@ -302,7 +302,115 @@ body {
     -o-background-size: cover;
     background-size: cover;
     width: 100%;
-    height: 1550px;
+    height: 1570px;
     filter: grayscale(100%);
     position: absolute;
+}
+
+.linha2 {
+    border: solid .5px;
+    position: absolute;
+    width: 100%;
+    color: var(--text-yellow);
+    position: absolute;
+    margin-top: -50px;
+    z-index: 1;
+    
+}
+
+#contato {
+    margin-top: 50px;
+    padding-top: 250px;
+    color: white;
+    background-color: black;
+}
+
+#contato .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 200px;
+}
+
+#contato .wrapper .right {
+    border: 2px solid yellow;
+    padding: 20px 50px 0 50px;
+    border-radius: 5px;
+}
+
+#contato .wrapper .right form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#contato .right input{
+    margin-bottom: 50px;
+}
+
+#contato .right  input.maior {
+    height: 150px;
+    border-radius: 5px;
+}
+
+#contato .right  input.menor {
+    height: 45px;
+    border-radius: 5px;
+}
+
+#contato .right  input.menor::placeholder {
+    padding-left: 10px;
+}
+
+#contato .right label {
+    margin-bottom: 5px;
+}
+
+#contato .right .button {
+    text-decoration: none;
+    color: var(--text-black);
+    padding: 12px 30px;
+    overflow: hidden;
+    border-radius: 25px;
+    font-size: 20px;
+    font-weight: bolder;
+    border: none;
+    cursor: pointer;
+    background: var(--background-secondary);
+    transition: 0.5s;
+}
+
+#contato .right .button:hover {
+    background: var(--neon-yellow);
+    box-shadow: 0 0 2.5px var(--neon-yellow),
+    0 0 7.5px var(--neon-yellow),
+    0 0 15px var(--neon-yellow),
+    0 0 25px var(--neon-yellow);
+}
+
+#contato .right h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+    font-size: 42px;
+    color: yellow;
+}
+
+#contato .left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#contato .left i {
+    font-size: 80px;
+    color: white;
+    margin-bottom: 50px;
+    margin-left: 150px;
+    transition: 0.7s ease;
+}
+
+#contato .left i:hover {
+    color: yellow;
 }
