--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 .itens {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content:space-between;
     padding: 0 450px;
     background: var(--background-color);
     z-index: 99;
@@ -114,11 +114,15 @@ body {
     position: absolute;
 }
 
-#home .left h2 {
+/* #home .left h2 {
     color: var(--text-yellow);
     font-size: 100px;
     margin-left: 90px;
     margin-bottom: 50px;
+} */
+
+#home img {
+    width: 700px;
 }
 
 
@@ -126,7 +130,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 50px 300px 105px 200px;
+    padding: 50px 100px 105px 200px;
+}
+
+#home .right {
+    margin-top: 60px;
 }
 
 #home .wrapper h1 {
@@ -134,14 +142,34 @@ body {
     font-size: 140px;
 }
 
-#home .wrapper p {
+#home .wrapper a {
+    display: flex;
     color: var(--text-white);
-    font-size: 40px;
-    margin-top: 15px;
+    font-size: 60px;
+    margin-top: 70px;
+    cursor: pointer;
+    transition: 1s ease;
+    transform: translate(-50%,-50%);
+    animation: neon 1s alternate infinite ease-in-out;
+}
+
+@keyframes neon {
+    from {
+        filter: drop-shadow(0 0 0 var(--neon-yellow));
+    }
+    to {
+        filter: drop-shadow(0 0 10px var(--neon-yellow));
+    }
+}
+
+
+
+#home .wrapper  a:hover {
+    color: yellow;
 }
 
 #home .left {
-    margin-top: -120px;
+    margin-top: 120px;
 }
 
 #sobre-nos {
@@ -302,7 +330,7 @@ body {
     -o-background-size: cover;
     background-size: cover;
     width: 100%;
-    height: 1570px;
+    height: 1370px;
     filter: grayscale(100%);
     position: absolute;
 }
@@ -319,8 +347,7 @@ body {
 }
 
 #contato {
-    margin-top: 50px;
-    padding-top: 250px;
+    padding-top: 50px;
     color: white;
     background-color: black;
 }
@@ -414,3 +441,132 @@ body {
 #contato .left i:hover {
     color: yellow;
 }
+
+#shows {
+    padding-top: 200px;
+    background: black;
+    padding-bottom: 50px;
+}
+
+#shows .videos1 {
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 0 70px;
+    margin-bottom: 20px;
+}
+
+#shows .videos2 {
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(3,1fr);
+    padding: 0 70px;
+}
+
+#shows h2 {
+    font-size: 70px;
+    color: yellow;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+
+#ingressos {
+    
+    background: black;
+    padding: 250px 100px;
+}
+
+#ingressos .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#ingressos .right li {
+    display: flex;
+    margin: 30px 0;
+    
+}
+
+#ingressos .right h2 {
+    color: yellow;
+    font-size: 50px;
+}
+
+#ingressos .right p {
+    color: white;
+    font-size: 20px;
+    margin: 10px 10px 0 0;
+}
+
+#ingressos ul li {
+    padding: 10px 0;
+    
+}
+
+#ingressos .right a {
+    display: flex;
+    align-items: center;
+    color: black;
+    font-weight: bold;
+    padding: 10px 20px;
+    background-color: yellow;
+    border-radius: 15px;
+    text-decoration: none;
+    margin-left: 10px;
+    transition: 0.5s;
+}
+
+#ingressos .right a:hover {
+    background: var(--neon-yellow);
+    box-shadow: 0 0 2.5px var(--neon-yellow),
+    0 0 7.5px var(--neon-yellow),
+    0 0 15px var(--neon-yellow),
+    0 0 25px var(--neon-yellow);
+}
+
+.linha3 {
+    border: solid .5px;
+    position: absolute;
+    width: 100%;
+    color: var(--text-yellow);
+    position: absolute;
+    margin-top: 50px;
+    z-index: 1;
+}
+
+/* From cssbuttons.io by @adamgiebl */
+button {
+    display: flex;
+    align-items: center;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 17px;
+    padding: 0.6em 1.2em 0.6em 0.7em;
+    color: black;
+    background: black;
+    background: linear-gradient(to right, yellow, #faed27, yellow);
+    border: none;
+    letter-spacing: 0.05em;
+    border-radius: 16px;
+   }
+   
+   button svg {
+    margin-right: 5px;
+    transform: rotate(-40deg);
+    transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
+   }
+   
+   button span {
+    transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
+   }
+   
+   button:hover svg {
+    transform: translateX(5px) rotate(0deg);
+   }
+   
+   button:hover span {
+    transform: translateX(7px);
+   }
